--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -4,23 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cambiar Contraseña</title>
+    <link rel="icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj4UQc4Q8iEBI4Oq9wFrfmjfWnSc4vOvN5NADSZKi9fV5Nsrtg3pfi-m1diPP3qD4FLsdreMzAHKSrxvVgkRKXQRUmrtdd5ta6Lc5HUqw7R81TJnKDlB_aSEhjfPC10a72KFtDeBGoOMYu5kH50EcdQHG7U9BsTUQ-jw0I1VFbVQyf_gx_1DYYfecWpCVM/s500/Plus-removebg-preview.png">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container mt-5">
         <h1 class="text-center">Cambiar Contraseña</h1>
-        <form method="POST" action="{{ url_for('change_password') }}" class="mt-4">
-            <div class="form-group">
-                <label for="new_password">Nueva Contraseña:</label>
-                <input type="password" name="new_password" id="new_password" class="form-control" required>
-            </div>
-            <div class="form-group">
-                <label for="confirm_password">Confirmar Nueva Contraseña:</label>
-                <input type="password" name="confirm_password" id="confirm_password" class="form-control" required>
-            </div>
-            <button type="submit" class="btn btn-success btn-block">Actualizar Contraseña</button>
-        </form>
         <br>
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -32,6 +22,19 @@
         {% endif %}
     {% endwith %}
     <br>
+        <form method="POST" action="{{ url_for('change_password') }}" class="mt-4">
+            <div class="form-group">
+                <label for="new_password">Nueva Contraseña:</label>
+                <input type="password" name="new_password" id="new_password" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="confirm_password">Confirmar Nueva Contraseña:</label>
+                <input type="password" name="confirm_password" id="confirm_password" class="form-control" required>
+            </div>
+            <button type="submit" class="btn btn-success btn-block">Actualizar Contraseña</button>
+        </form>
+        <button onclick="location.href='admin'" class="btn btn-primary">Volver</button>
+        
     </div>
 </body>
 </html>
