--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -13,7 +13,7 @@
   
   body {
     font-family: 'Netflix Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    background: url('https://st.depositphotos.com/30440304/54543/i/450/depositphotos_545438588-stock-photo-style-black-background-geometric-layers.jpg') no-repeat center center fixed;
+    background: url('https://static.vecteezy.com/system/resources/previews/010/825/735/non_2x/dark-background-random-minimalist-abstract-illustration-for-logo-card-banner-web-and-printing-free-vector.jpg') no-repeat center center fixed;
     background-size: cover;
     color: var(--text-color);
     margin: 0;
@@ -29,8 +29,10 @@
   
   /* Contenedor principal */
   .container {
-    width: 90%;
-    max-width: 1200px;
+    
+    justify-content: center; /* Centrar horizontalmente */
+    align-items: center; /* Centrar verticalmente */
+    width: 60%;
     margin: 20px auto;
     background: var(--surface-color);
     padding: 30px;
@@ -55,7 +57,7 @@
   input[type="date"],
   input[type="number"],
   select {
-    width: 100%;
+    width: 70%;
     padding: 16px;
     margin-bottom: 20px;
     border: none;
@@ -78,6 +80,7 @@
   
   input[type="submit"],
   button {
+ 
     background-color: var(--primary-color);
     color: var(--text-color);
     padding: 16px 24px;
@@ -98,7 +101,7 @@
   
   /* Estilos para encabezado */
   .header {
-    background-color: var(--surface-color);
+    background: linear-gradient(135deg, #2b2b2b 0%, #3d3d3d 40%, #1a1a1a 100%);
     color: var(--text-color);
     padding: 20px;
     text-align: center;
@@ -121,18 +124,22 @@
   .option-list {
     list-style-type: none;
     padding: 0;
-    margin: 0;
+    margin: 0 auto; /* Centrar el contenedor si es necesario */
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
+    gap: 40px;
+    max-width: 1200px;
   }
   
   .option-list li {
-    background-color: var(--surface-color);
-    padding: 20px;
-    border-radius: 4px;
+    text-align: center;
+    background: linear-gradient(135deg, #2b2b2b 0%, #3d3d3d 40%, #1a1a1a 100%);
+    padding: 15px 20px;
+    border-radius: 50px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    max-width: 600px; /* Limitar el ancho máximo de cada elemento */
+   
   }
   
   .option-list li:hover {
@@ -151,7 +158,23 @@
   .option-list li a:hover {
     color: var(--primary-color);
   }
-  
+
+ /* Responsivo: Pantallas pequeñas */
+@media (max-width: 768px) {
+  .option-list {
+      grid-template-columns: repeat(2, minmax(0, 1fr)); /* Forzamos dos columnas */
+      gap: 10px; /* Reducimos el espacio entre opciones */
+  }
+
+  .option-list li {
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      width: 300px;
+      padding: 10px; /* Reducimos el padding para dispositivos pequeños */
+  }
+}
+
   /* Estilos para el pie de página */
   .footer {
     text-align: center;
@@ -165,12 +188,8 @@
   /* Estilos para tablas */
   table {
     width: 100%;
-    border-collapse: separate;
-    border-spacing: 0;
-    margin: 30px 0;
+    border-collapse: collapse;
     background-color: var(--surface-color);
-    border-radius: 4px;
-    overflow: hidden;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
   
@@ -233,7 +252,7 @@
     border-radius: 4px;
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
     padding: 0;
-    background-color: #000;
+    background-color: #292727;
     border: 1px solid var(--input-border-color);
   }
   
@@ -282,7 +301,7 @@
   /* Media Queries para diseño responsivo */
   @media screen and (max-width: 768px) {
     .container {
-      width: 95%;
+      width: 80%;
       padding: 20px;
     }
     
@@ -296,7 +315,7 @@
     
     input[type="submit"],
     button {
-      width: 100%;
+      width: 80%;
     }
   }
   
@@ -363,3 +382,71 @@
   ::-webkit-scrollbar-thumb:hover {
     background: var(--primary-color);
   }
+
+  table-container {
+    max-height: 400px; /* Ajusta según necesidad */
+    overflow-y: auto;
+    border: 1px solid #ddd;
+  }
+ 
+  thead th {
+    position: sticky;
+    top: 0;
+    background: #695d5d;
+    z-index: 2;
+    border-bottom: 2px solid #5a4747;
+  }
+
+
+    /* Ocultar la rueda de carga inicialmente */
+    #loading {
+        display: none; 
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: rgba(0, 0, 0, 0.8);
+        padding: 20px;
+        border-radius: 10px;
+        text-align: center;
+        color: white;
+    }
+
+    /* Spinner de carga */
+    .spinner {
+        border: 4px solid rgb(224, 8, 8);
+        border-top: 4px solid #fff;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        animation: spin 1s linear infinite;
+        margin: 10px auto;
+    }
+
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
+
+.aviso {
+  text-align: center;
+  background-color: #ffebcc;
+  border-left: 5px solid orange;
+  padding: 15px;
+  margin: 20px 0;
+  font-size: 16px;
+  color: #d35400;
+  font-weight: bold;
+}
+
+.aviso li{
+  font-size: 16px;
+  color: #d35400;
+  font-weight: bold;
+}
+
+.aviso .importante {
+  text-align: center;
+  color: #d80000;
+  font-weight: bold;
+}
