--- a/app/templates/agregar_cuenta.html
+++ b/app/templates/agregar_cuenta.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agregar Cuenta</title>
+    <link rel="icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj4UQc4Q8iEBI4Oq9wFrfmjfWnSc4vOvN5NADSZKi9fV5Nsrtg3pfi-m1diPP3qD4FLsdreMzAHKSrxvVgkRKXQRUmrtdd5ta6Lc5HUqw7R81TJnKDlB_aSEhjfPC10a72KFtDeBGoOMYu5kH50EcdQHG7U9BsTUQ-jw0I1VFbVQyf_gx_1DYYfecWpCVM/s500/Plus-removebg-preview.png">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <script>
         function calcularFechaVencimiento() {
@@ -19,39 +20,11 @@
             }
         }
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    {% extends "base.html" %}
-    {% block title %}Inicio - Administracion de StreamPlus{% endblock %}
-
-    {% block content %}
+    <div class="container">
     <h1>Agregar Cuenta</h1>
-    <form method="POST">
-        <label>ID: {{ next_id }}</label><br>
-        <label>Tipo de Cuenta:</label>
-        <select name="tipo_cuenta">
-            <option disabled="" selected="" value"">Seleccione una opcion</option>
-            <option value="netflix">Netflix</option>
-            <option value="disneyplus">Disney+</option>
-            <option value="max">Max</option>
-            <option value="spotify">Spotify</option>
-            <option value="youtube">YouTube</option>
-            <option value="primevideo">Prime Video</option>
-        </select><br>
-        <label>Correo de la Cuenta:</label>
-        <input type="text" name="correoc" required><br>
-        <label>Contraseña:</label>
-        <input type="password" name="password" required><br>
-        <label>Fecha de Compra:</label>
-        <input type="date" name="fechac" required onchange="calcularFechaVencimiento()"><br>
-        <label>Fecha de Vencimiento:</label>
-        <input type="date" name="fechav" required><br>
-        <label>Perfiles:</label>
-        <input type="number" name="perfiles"><br>
-        <label>Inversión:</label>
-        <input type="number" name="inversion" step="any" required><br>
-        <button type="submit">Guardar</button>
-    </form>
     <br>
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -63,7 +36,56 @@
         {% endif %}
     {% endwith %}
     <br>
-    {% endblock %}
-    <a class="btn btn-primary" href="{{ url_for('streamplus') }}">Volver</a>
+    
+    <form id="agregar_cuenta_form" method="POST">
+        <label>ID: {{ next_id }}</label><br>
+        <label>Tipo de Cuenta:</label>
+        <select name="tipo_cuenta">
+            <option disabled selected value="">Seleccione una opción</option>
+            <option value="netflix">Netflix</option>
+            <option value="disneyplus">Disney+</option>
+            <option value="max">Max</option>
+            <option value="spotify">Spotify</option>
+            <option value="youtube">YouTube</option>
+            <option value="primevideo">Prime Video</option>
+        </select><br>
+        <label>Correo de la Cuenta:</label>
+        <input type="email" name="correoc" required><br>
+        <label>Contraseña:</label>
+        <input type="text" name="password2" required><br>
+        <label>Contraseña de Aplicacion:</label>
+        <input type="text" name="password" required><br>
+        <label>Fecha de Compra:</label>
+        <input type="date" name="fechac" required onchange="calcularFechaVencimiento()"><br>
+        <label>Fecha de Vencimiento:</label>
+        <input type="date" name="fechav" required><br>
+        <label>Perfiles:</label>
+        <input type="number" name="perfiles"><br>
+        <label>Inversión:</label>
+        <input type="number" name="inversion" step="any" required><br>
+        <button type="submit" id="guardar_cuenta">Guardar</button>
+    </form>
+    
+    
+    <button onclick="location.href='admin'" class="btn btn-primary">Volver</button>
+
+    <!-- Contenedor de la rueda de carga -->
+    <div id="loading">
+        <div class="spinner"></div>
+    </div>
+</div>
+    <script>
+        $(document).ready(function () {
+            $('#agregar_cuenta_form').submit(function (e) {
+                // Mostrar la rueda de carga y deshabilitar el botón
+                $('#loading').show();
+                $('#guardar_cuenta').prop('disabled', true);
+
+                // Continuar con el envío del formulario
+                return true;
+            });
+        });
+    </script>
 </body>
+
 </html>
