--- a/app/templates/estado.html
+++ b/app/templates/estado.html
@@ -4,72 +4,125 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estado de Cuentas</title>
+    <link rel="icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj4UQc4Q8iEBI4Oq9wFrfmjfWnSc4vOvN5NADSZKi9fV5Nsrtg3pfi-m1diPP3qD4FLsdreMzAHKSrxvVgkRKXQRUmrtdd5ta6Lc5HUqw7R81TJnKDlB_aSEhjfPC10a72KFtDeBGoOMYu5kH50EcdQHG7U9BsTUQ-jw0I1VFbVQyf_gx_1DYYfecWpCVM/s500/Plus-removebg-preview.png">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #1e1e1e;
+            color: #fff;
+            margin: 0;
+            padding: 20px;
         }
-        .container {
+
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .container2 {
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
-            margin: 20px;
+            justify-content: center;
         }
+
         .card {
-            border: 1px solid #ccc;
+            background-color: #2c2c2c;
+            border: 1px solid #444;
             border-radius: 8px;
             padding: 15px;
             width: 300px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transition: transform 0.2s, box-shadow 0.2s;
         }
+
+        .card:hover {
+            transform: scale(1.02);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
+        }
+
         .card h3 {
-            margin: 0;
+            margin: 0 0 10px;
             font-size: 18px;
         }
+
+        .card p {
+            margin: 5px 0;
+        }
+
         .card ul {
             list-style-type: none;
             padding: 0;
+            margin: 10px 0;
         }
+
         .card li {
+            background-color: #3a3a3a;
+            border: 1px solid #555;
+            border-radius: 6px;
             margin: 5px 0;
+            padding: 10px;
         }
+
         .toggle-content {
             display: none;
         }
+
         .toggle-content.active {
             display: block;
         }
+
         .toggle-button {
             cursor: pointer;
-            color: blue;
-            text-decoration: underline;
+            color: #dd0b0b;
+            text-decoration: none;
+            margin-top: 10px;
+            display: inline-block;
         }
     </style>
     <script>
-        function toggleContent(id) {
+        function toggleContent(id, button) {
             const content = document.getElementById(id);
             content.classList.toggle('active');
+    
+            // Cambiar el texto del botón basado en el estado del contenido
+            if (content.classList.contains('active')) {
+                button.textContent = 'Ocultar';
+            } else {
+                button.textContent = 'Mostrar';
+            }
         }
-    </script>
+    </script>    
 </head>
 <body>
+    <div class="header">
     <h1>Estado de Cuentas</h1>
-    <div class="container">
+    <button onclick="location.href='admin'" class="btn btn-primary">Volver</button>
+    </div>
+    <br>
+    <div class="container2">
         {% for item in data %}
         <div class="card">
             <h3>{{ item.cuenta.correoc }}</h3>
+            <p><strong>Cuenta ID :</strong> {{ item.cuenta.id }}</p>
             <p><strong>Tipo de cuenta:</strong> {{ item.cuenta.tipocuenta }}</p>
             <p><strong>Perfiles disponibles:</strong> {{ item.perfiles_disponibles }}</p>
-            <span class="toggle-button" onclick="toggleContent('content-{{ loop.index }}')">Ver más</span>
             <div id="content-{{ loop.index }}" class="toggle-content">
                 <ul>
                     {% for venta in item.ventas %}
-                    <li>ID: {{ venta.id }}, Cliente: {{ venta.cliente }}</li>
+                    <li>
+                        <strong>ID:</strong> {{ venta.id }} <br>
+                        <strong>Cliente:</strong> {{ venta.cliente }} <br>
+                        <strong>Expira:</strong> {{ venta.fechaexp }}
+                    </li>
                     {% endfor %}
                     {% for i in range(item.perfiles_disponibles) %}
                     <li>Perfil Disponible</li>
                     {% endfor %}
                 </ul>
             </div>
+            <button class="btn btn-primary" onclick="toggleContent('content-{{ loop.index }}', this)">Mostrar</button>
         </div>
         {% endfor %}
     </div>
