--- a/app/templates/metodos_pago.html
+++ b/app/templates/metodos_pago.html
@@ -5,5 +5,7 @@
 {% endblock %}
 
 {% block content %}
+<link rel="icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj4UQc4Q8iEBI4Oq9wFrfmjfWnSc4vOvN5NADSZKi9fV5Nsrtg3pfi-m1diPP3qD4FLsdreMzAHKSrxvVgkRKXQRUmrtdd5ta6Lc5HUqw7R81TJnKDlB_aSEhjfPC10a72KFtDeBGoOMYu5kH50EcdQHG7U9BsTUQ-jw0I1VFbVQyf_gx_1DYYfecWpCVM/s500/Plus-removebg-preview.png">
+<button onclick="location.href='admin'" class="btn btn-primary">Volver</button>
 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgyp7sIVQ1bt-RABts1eTvCPEdVFfAP_9f5nOG2V7keOUBXvf0DBZnihnyd0p0ifa7B9yxikpBW03-QVjmwQQlqx-D0EacxSOwipd4zUwEWW2DFWpC1-NktGX5J0ZepqaWvRMiwwXv9TFqPJqBS_at6BDDRvyzc3RQMerJH-5V3aXXpOU9yteoHFEDNnK4/s720/IMG_0033.png"  alt="M">
 {% endblock %}
