--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,60 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro - StreamPlus</title>
-    <style>
-            /* Estilos para mensajes flash */
-
-            .flash-success {
-                color: #0ac235; /* Verde */
-            }
-
-            .flash-info {
-                color: #0ac235; /* Verde */
-                background-color: #d4edda; /* Fondo verde claro */
-                border-color: #c3e6cb; /* Borde verde claro */
-            }
-
-            .flash-danger {
-                color: #e7081f; /* Rojo */
-                background-color: #f8d7da; /* Fondo rojo claro */
-                border-color: #f5c6cb; /* Borde rojo claro */
-            }
-
-            .flash-warning {
-                color: #f0ad4e;
-                background-color: #f8d7da;
-                border-color: #f5c6cb;
-            }
-
-    </style>
+    <link rel="icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj4UQc4Q8iEBI4Oq9wFrfmjfWnSc4vOvN5NADSZKi9fV5Nsrtg3pfi-m1diPP3qD4FLsdreMzAHKSrxvVgkRKXQRUmrtdd5ta6Lc5HUqw7R81TJnKDlB_aSEhjfPC10a72KFtDeBGoOMYu5kH50EcdQHG7U9BsTUQ-jw0I1VFbVQyf_gx_1DYYfecWpCVM/s500/Plus-removebg-preview.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
+        /* Estilos para mensajes flash */
+        .flash-success {
+            color: #0ac235;
+        }
+
+        .flash-info {
+            color: #0ac235;
+            background-color: #d4edda;
+            border-color: #c3e6cb;
+        }
+
+        .flash-danger {
+            color: #e7081f;
+            background-color: #f8d7da;
+            border-color: #f5c6cb;
+        }
+
+        .flash-warning {
+            color: #f0ad4e;
+            background-color: #f8d7da;
+            border-color: #f5c6cb;
+        }
+
         body {
             background: url('https://elcomercio.pe/resizer/KBc8clB-bDX3SuMpS3SLWCTxrK8=/980x528/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/LZNWRLEKLZH5ZBLDYNHRB4LGX4.jpg') no-repeat center center fixed;
             background-size: cover;
+            display: flex; /* Usar flexbox */
+            justify-content: center; /* Centrar horizontalmente */
+            align-items: center; /* Centrar verticalmente */
+            margin: 0; /* Eliminar márgenes del body */
         }
 
         label {
-            color: #f8d7da;
+            color: #ffffff;
         }
 
         .container {
-            margin-top: 50px;
+            width: 90%;
+            margin: 20px;
         }
-        .register-form, .verify-form {
+
+        .login-form {
             background-color: #333;
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         }
+
         .password-container {
             position: relative;
         }
+
         .password-container input[type="password"],
         .password-container input[type="text"] {
-            padding-right: 30px; /* Espacio para el icono del ojo */
+            padding-right: 30px;
         }
+
         .password-container .toggle-password {
             position: absolute;
             top: 75%;
@@ -65,23 +72,66 @@
             transform: translateY(-50%);
             cursor: pointer;
         }
+
+        /* Estilos para la rueda de carga */
+        #loading {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 9999;
+        }
+
+        #loading .spinner {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            border: 6px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 6px solid #3498db;
+            width: 50px;
+            height: 50px;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
     </style>
 </head>
 <body>
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="register-form">
-                <h1 style="color: #f8d7da;" class="text-center">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEieGkUeZGUtcHFXvXvldzZrOPIXRhEQfH_OdthzY8ypt5-Vt7IAnlTmpSNGg9WZpf3fjfuNMveyAm5NSdvU2ipa1ggFN4ePPXr7GjtP8ZwtaP3VUBgp0ld-InUodUAXwV3CjBx5XLWW4gcosuKhjz2co0Z-2yiJVg7gi5nIELP6jha0O-kJ2LU9hN0ksiI/s1600/s.png" alt="StreamPlus" class="logo" height="140" width="140">
+            <div class="login-form">
+                <h1 style="color: #ffffff;" class="text-center">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj4UQc4Q8iEBI4Oq9wFrfmjfWnSc4vOvN5NADSZKi9fV5Nsrtg3pfi-m1diPP3qD4FLsdreMzAHKSrxvVgkRKXQRUmrtdd5ta6Lc5HUqw7R81TJnKDlB_aSEhjfPC10a72KFtDeBGoOMYu5kH50EcdQHG7U9BsTUQ-jw0I1VFbVQyf_gx_1DYYfecWpCVM/s500/Plus-removebg-preview.png" alt="StreamPlus" class="logo" height="140" width="140">
                     <div></div>
                     Registro</h1>
-                <form method="POST" action="{{ url_for('register') }}">
+                <form id="registro_form" method="POST" action="{{ url_for('register') }}">
                     <div class="form-group">
-                        <label for="nombre_usuario">Nombre de Usuario</label>
-                        <input type="text" class="form-control" id="nombre_usuario" name="nombre_usuario" required oninput="this.value = this.value.toLowerCase().replace(/\s/g, '')" placeholder="ejemplo: juan123">
+                        <label for="nombre">Nombre</label>
+                        <input type="text" class="form-control" id="nombre" name="nombre" required oninput="this.value = this.value.toUpperCase().replace(/\s/g, '')">
                     </div>
                     <div class="form-group">
+                        <label for="apellido">Apellido</label>
+                        <input type="text" class="form-control" id="apellido" name="apellido" required oninput="this.value = this.value.toUpperCase().replace(/\s/g, '')">
+                    </div>
+                    <div class="form-group">
+                        <label for="nombre_usuario">Nombre de Usuario</label>
+                        <input type="text" class="form-control" id="nombre_usuario" name="nombre_usuario" minlength="5" required oninput="checkUsernameAvailability()">
+                        <span id="username_message"></span>
+                    </div>                    
+                    <div class="form-group password-container">
                         <label for="contraseña">Contraseña</label>
                         <input type="password" class="form-control" id="password" name="password" required>
                         <span class="toggle-password">
@@ -90,13 +140,13 @@
                     </div>
                     <div class="form-group">
                         <label for="numero_telefono">Número de Teléfono</label>
-                        <input type="number" class="form-control" id="numero_telefono" name="numero_telefono" pattern="\d{8}" maxlength="8" title="El numero debe contener 8 dígitos" placeholder="ejemplo: 97302756" required>
+                        <input type="number" class="form-control" id="numero_telefono" name="numero_telefono" pattern="\d{8}" maxlength="8" title="El numero debe contener 8 dígitos" placeholder="97302756" required>
                     </div>
                     <div class="form-group">
                         <label for="correo_electronico">Correo Electrónico</label>
                         <input type="email" class="form-control" id="correo_electronico" name="correo_electronico" required>
                     </div>
-                    <button type="submit" class="btn btn-dark btn-block">Registrar</button>
+                    <button type="submit" id="submit_button" class="btn btn-dark btn-block">Registrarse</button>
                 </form>
                 <br>
                 {% with messages = get_flashed_messages(with_categories=true) %}
@@ -109,10 +159,14 @@
                     {% endif %}
                 {% endwith %}
                 <br>
-                <p style="color: #f8d7da;" class="text-center">¿Ya tienes cuenta? <a href="{{ url_for('login') }}">Iniciar Sesion</a></p>
+                <p style="color: #ffffff;" class="text-center">¿Ya tienes cuenta? <br><a href="{{ url_for('login') }}">Iniciar Sesion</a></p>
             </div>
         </div>
     </div>
+</div>
+<!-- Contenedor de la rueda de carga -->
+<div id="loading">
+    <div class="spinner"></div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
@@ -129,5 +183,44 @@
         });
     });
 </script>
+
+<script>
+    async function checkUsernameAvailability() {
+        const nombreUsuario = document.getElementById("nombre_usuario").value.toLowerCase().replace(/\s/g, '');
+        const messageSpan = document.getElementById("username_message");
+
+        try {
+            const response = await fetch(`/check_username?username=${nombreUsuario}`);
+            const data = await response.json();
+            const usuarioDisponible = data.disponible;
+
+            if (usuarioDisponible) {
+                messageSpan.textContent = "Nombre de usuario disponible";
+                messageSpan.style.color = "green";
+            } else {
+                messageSpan.textContent = "Nombre de usuario no disponible";
+                messageSpan.style.color = "red";
+            }
+
+            // Habilitar o deshabilitar el botón de envío según disponibilidad
+            document.getElementById("submit_button").disabled = !usuarioDisponible;
+        } catch (error) {
+            console.error("Error verificando disponibilidad de nombre de usuario: ", error);
+        }
+    }
+</script>
+<script>
+    $(document).ready(function () {
+        $('#registro_form').submit(function (e) {
+            // Mostrar la rueda de carga y deshabilitar el botón
+            $('#loading').show();
+            $('#submit_button').prop('disabled', true);
+
+            // Continuar con el envío del formulario
+            return true;
+        });
+    });
+</script>
+
 </body>
 </html>
