--- a/app/templates/ver_clientes.html
+++ b/app/templates/ver_clientes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clientes</title>
+    <link rel="icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj4UQc4Q8iEBI4Oq9wFrfmjfWnSc4vOvN5NADSZKi9fV5Nsrtg3pfi-m1diPP3qD4FLsdreMzAHKSrxvVgkRKXQRUmrtdd5ta6Lc5HUqw7R81TJnKDlB_aSEhjfPC10a72KFtDeBGoOMYu5kH50EcdQHG7U9BsTUQ-jw0I1VFbVQyf_gx_1DYYfecWpCVM/s500/Plus-removebg-preview.png">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
@@ -14,11 +15,13 @@
     <div class="header">
         <h1>Clientes</h1>
     </div>
+    <button onclick="location.href='admin'" class="btn btn-primary">Volver</button>
     <div class="container">
     <form method="POST">
         <input type="text" name="search" placeholder="Buscar...">
         <button type="submit">Buscar</button>
     </form>
+    <div class="table-container"></div>
     <table>
         <thead>
         <tr>
@@ -50,7 +53,6 @@
             {% endif %}
         {% endwith %}
         <br>
-    <a href="{{ url_for('admin') }}">Volver</a>
     </div>
     {% endblock %}
 </body>
