--- a/app/templates/ver_pedidos.html
+++ b/app/templates/ver_pedidos.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Confirmar Pedidos</title>
+    <link rel="icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj4UQc4Q8iEBI4Oq9wFrfmjfWnSc4vOvN5NADSZKi9fV5Nsrtg3pfi-m1diPP3qD4FLsdreMzAHKSrxvVgkRKXQRUmrtdd5ta6Lc5HUqw7R81TJnKDlB_aSEhjfPC10a72KFtDeBGoOMYu5kH50EcdQHG7U9BsTUQ-jw0I1VFbVQyf_gx_1DYYfecWpCVM/s500/Plus-removebg-preview.png">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <h1>Confirmar Pedidos</h1>
+    <button onclick="location.href='admin'" class="btn btn-primary">Volver</button>
     <br>
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -19,6 +21,7 @@
     {% endwith %}
     <br>
 
+    <div class="table-container"></div>
     <table>
         <thead>
             <tr>
@@ -60,6 +63,6 @@
             {% endfor %}
         </tbody>
     </table>
-    <button onclick="location.href='admin'" class="btn btn-primary">Volver</button>
+    
 </body>
 </html>
