--- a/app/templates/ver_retiros.html
+++ b/app/templates/ver_retiros.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Retiros Pendientes</title>
+    <link rel="icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj4UQc4Q8iEBI4Oq9wFrfmjfWnSc4vOvN5NADSZKi9fV5Nsrtg3pfi-m1diPP3qD4FLsdreMzAHKSrxvVgkRKXQRUmrtdd5ta6Lc5HUqw7R81TJnKDlB_aSEhjfPC10a72KFtDeBGoOMYu5kH50EcdQHG7U9BsTUQ-jw0I1VFbVQyf_gx_1DYYfecWpCVM/s500/Plus-removebg-preview.png">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <h1>Retiros Pendientes</h1>
+    <button onclick="location.href='admin'" class="btn btn-primary">Volver</button>
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
         <ul class="flashes">
@@ -16,6 +18,21 @@
         </ul>
       {% endif %}
     {% endwith %}
+    <form id="searchForm">
+        <select id="filter">
+            <option disabled="" selected="" value"">Buscar por</option>
+            <option value="id">Buscar por ID</option>
+            <option value="referido">Buscar por Referido</option>
+            <option value="cliente">Buscar por Cliente</option>
+            <option value="tipocuenta">Buscar por Tipo de Cuenta</option>
+            <option value="idcorreo">Buscar por ID Correo</option>
+            <!-- Agrega más opciones según los campos que quieras filtrar -->
+        </select>
+        <input type="text" id="searchInput" placeholder="Buscar...">
+        <button type="button" class="btn btn-danger" onclick="filterTable()">Buscar</button>
+        <button onclick="location.href='admin'" class="btn btn-primary">Volver</button>
+    </form>
+    <div class="table-container"></div>
     <table>
         <thead>
             <tr>
@@ -49,6 +66,5 @@
             {% endfor %}
         </tbody>
     </table>
-    <a href="{{ url_for('admin') }}">Volver</a>
 </body>
 </html>
